force-app/main/default/objects/Apttus__TemplateClauseReferenceVersion__c/Apttus__TemplateClauseReferenceVersion__c.object-meta.xml
<CustomObject>
    <description>Holds Template Clause References for this version</description>
    <label>Template Clause Reference Version</label>
    <nameField>
        <label>Template Clause Reference Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Clause Reference Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>