force-app/main/default/objects/Apttus__TemplateClauseReferenceVersion__c/fields/Apttus__ClauseId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ClauseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the clause in Template Clause Reference</description>
    <label>Clause</label>
    <referenceTo>Apttus__APTS_Template__c</referenceTo>
    <relationshipLabel>Template Clause Reference Versions (Clause)</relationshipLabel>
    <relationshipName>VersionedClauseVersions</relationshipName>
    <type>Lookup</type>
</CustomField>