force-app/main/default/objects/Apttus__TemplateClauseReferenceVersion__c/fields/Apttus__ClauseReferenceId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ClauseReferenceId__c</fullName>
    <description>Clause reference id</description>
    <inlineHelpText>Clause reference id</inlineHelpText>
    <label>Clause Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>