force-app/main/default/objects/Apttus__TemplateClauseReferenceVersion__c/fields/Apttus__ClauseVersionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ClauseVersionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to clause version id in Template Clause Reference</description>
    <inlineHelpText>Lookup to clause version id in Template Clause Reference</inlineHelpText>
    <label>Clause Version</label>
    <referenceTo>Apttus__TemplateVersion__c</referenceTo>
    <relationshipLabel>Template Clause Reference Versions (Clause Version)</relationshipLabel>
    <relationshipName>VersionedClauseVersions</relationshipName>
    <type>Lookup</type>
</CustomField>