force-app/main/default/objects/Apttus__TemplateClauseReferenceVersion__c/fields/Apttus__TemplateVersionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__TemplateVersionId__c</fullName>
    <description>Master-detail to template version</description>
    <inlineHelpText>Master-detail to template version</inlineHelpText>
    <label>Template Version</label>
    <referenceTo>Apttus__TemplateVersion__c</referenceTo>
    <relationshipLabel>Template Clause Reference Versions (Template Version)</relationshipLabel>
    <relationshipName>ClauseReferences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>